--- a/main.css
+++ b/main.css
@@ -8,6 +8,12 @@ body{
   align-items: center;
 }
 
+.vertical-center2{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
 .nav-icons {
   font-size: 2.5em;
 }
@@ -28,4 +34,9 @@ body{
 
 .list-container {
   margin-top: 100px;
+}
+
+.tfKategorie-class {
+  height: 30px;
+  width: 180px;
 }
